# loaded-dice-calc-data-downloader

./: Cargo.toml  Dockerfile
.github/workflows/: download-data.yaml  qa.yaml
deployments/kubernetes/: data-downloader-job.yaml
src/: champion.rs  data_file.rs  lib.rs  main.rs  run.rs  set.rs  util.rs
