[package]
name = "loaded-dice-calc-data-downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
reqwest = { version = "0.11.17", features = ["json"] }
tokio = { version = "1.28.1", features = ["full"] }
thiserror = "1.0.40"

[dev-dependencies]
spectral = "0.6.0"
uuid = { version = "1.3.2", features = ["v4"] }